Testing - Line/Dot Cutoff Issue

--- a/styles.css
+++ b/styles.css
@@ -543,7 +543,7 @@ footer {
   .dot-2::after {
     width: 11px;
     height: 11px;
-    bottom: 4px;
+    bottom: 3.5px;
   }
 
   @keyframes moveUp {
